fix scrollbar

--- a/src/index.css
+++ b/src/index.css
@@ -56,6 +56,7 @@ body {
   border-radius: 0.9rem;
   overflow-y: scroll;
   position: relative;
+  scrollbar-width: none;
 }
 
 .loader {
